app/assets/stylesheets/application.css
/*
* This is a manifest file that'll be compiled into application.css, which will include all the files
* listed below.
*
* Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
* vendor/assets/stylesheets directory can be referenced here using a relative path.
*
* You're free to add application-wide styles to this file and they'll appear at the bottom of the
* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
* files in this directory. Styles in this file should be added after the last require_* statement.
* It is generally better to create a new file per style scope.
*
*= require_tree .
*= require_self

*/

/*/////////////////////////////////////////////////
////////////////////  RESET  //////////////////////
/////////////////////////////////////////////////*/

html, body, div, span, h1, h2, h3, h4, a, ol, ul, li, form, label, article, aside, figure, figcaption, footer, header, nav {
 margin: 0;
 padding: 0;
 border: 0;
 font-size: 100%;
 font: inherit;
 vertical-align: baseline;
}

body {
  scroll-behavior: auto;
  line-height: 1.5;
  color: white;
  font-family: proxima_nova,Helvetica Neue,Helvetica,Arial,sans-serif;
  -webkit-user-select: none;
  /* font-family: 'Open Sans', sans-serif; */
}

ul {
 list-style: none;
}

ol {
  list-style: decimal inside;
}

a {
  text-decoration: none;
  color: white;
}

h1 {
  font-size: 45px;
  font-weight: 500;
}

h2 {
  font-size: 28px;
  font-weight: 500;
}

h3 {
  font-size: 25px;
  font-weight: 200;
}

.BLACKround {
  background-color: black;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
  z-index: -10;
  overflow: auto;
}

.greyish {
  background-color: #111111;
}

#root {
  height: 100%;
  overflow: hidden;
}

#spotiFLY-logo {
  height: 30px;
  width: 30px;
  filter: invert(100%);
  color: transparent;
  border: .5px solid black;
  border-radius: 50%;
  padding: 5px 5px;
  margin-right: 10px;
}

#spotiFLY-logo.sidebar-logo {
  opacity: 0.7;
}

/* custom scrollbar */
  /* width */
  ::-webkit-scrollbar {
    width: 10px;
  }

  /* Track */
  ::-webkit-scrollbar-track {
    background: transparent;
  }

  /* Handle */
  ::-webkit-scrollbar-thumb {
    background: black;
    border: 1px solid #999;
    border-radius: 4.5px;
  }

  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    background: #555;
  }

/*/////////////////////////////////////////////////
////////////////  greeting page  //////////////////
/////////////////////////////////////////////////*/

@keyframes fadeinpartial {
  from { opacity: 0; }
  to   { opacity: .35; }
}

.greeting-background {
  background: url("https://images2.alphacoders.com/267/267922.jpg") no-repeat;
  background-size: cover;
  height: -webkit-fill-available;
  opacity: 0.35;
  z-index: -1;
  overflow: hidden;
}

@media (max-width: 800px) {
  /* body {
    overflow: scroll;
  } */

  /* #root {
    overflow: scroll;
  }

  /* .greeting-background {
    overflow: scroll;
  } */

  .BLACKround {
    overflow: scroll;
  }
}

.errors {
  margin-top: 5px;
  margin-bottom: 5px;
  color: #ff6666;
}

.splash-flexbox {
  position: absolute;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
  color: #e0e0e0;
}

.greeting-cont {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-around;
  height: 325px;
  min-width: 350px;
  margin-right: 30px;
  border-right: 0.5px solid white;
}

.greeting-cont input {
  height: 45px;
  width: 235px;
  font-size: 17px;
  text-align: center;
  border: 0.5px solid black;
  border-radius: 20px;
  background-color: rgba(255,255,255, .9);
  outline: none;
}

.main-logo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 300px;
  margin-top: 40px;
  letter-spacing: 1px;
  font-weight: 500;
}

.signup-link {
  display: flex;
  color: white;
  background-color: #1db954;
  border: 0.5px solid black;
  height: 45px;
  width: 200px;
  margin-top: 5px;
  border-radius: 20px;
  justify-content: center;
  align-items: center;
}

#account-question {
  color: #bfbfbf;
  font-size: 13px;
  letter-spacing: 1.5px;
}

#login-link-button {
  display: flex;
  color: black;
  background-color: white;
  border: 0.5px solid black;
  height: 45px;
  width: 200px;
  margin-bottom: 60px;
  border-radius: 20px;
  justify-content: center;
  align-items: center;
}

#session-link a {
  color: #1db954;
}

#submit-button {
  color: white;
  background-color: #1db954;
  border: 0.5px solid black;
  height: 45px;
  width: 235px;
  border-radius: 20px;
}

#submit-button:hover {
  background-color: #047a3d;
  cursor: pointer;
}

.signup-link:hover {
  background-color: #047a3d;
  cursor: pointer;
}

#login-link-button:hover {
  background-color: #a5a5a5;
  cursor: pointer;
}

#guest-login {
  cursor: default;
}

#guest-login:hover {
  cursor: pointer;
  color: #1db954;
}

@keyframes fadeinfull {
  from { opacity: 0; }
  to   { opacity: 1; }
}

#welcome-message, #greeting-cont {
  /* -webkit-animation: fadeinfull 3s;
   -moz-animation: fadeinfull 3s;
    -ms-animation: fadeinfull 3s;
     -o-animation: fadeinfull 3s;
        animation: fadeinfull 3s ease-in;
        opacity: 1; */
}

.welcome-message {
  /* opacity: 0; */
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 325px;
  min-width: 600px;
  margin-left: 32px;
}

.welcome-message h1 {
  color: #1db954;
}

.welcome-bullets strong {
  color: #1db954;
}

.welcome-bullets {
  font-weight: 335;
  letter-spacing: 0.4px;
}

/*/////////////////////////////////////////////////
////////////////  modal  //////////////////////////
/////////////////////////////////////////////////*/

.modal-background {
  position: fixed;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  background-color: rgba(0,0,0,.9);
  z-index: 10;
}

.modal-child {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
  width: 100%;
}
/* ... */

